# encase_enum

./: .gitignore  Cargo.toml  README.md
derive/: Cargo.toml
derive/src/: lib.rs
src/: lib.rs
wgsl_autogen/: Cargo.toml
wgsl_autogen/src/: lib.rs  main.rs  parser.rs  wgsl.rs
